--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -66,6 +68,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include=".editorconfig" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -80,4 +84,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Leadtools.Kernel.21.0.0.2\build\net40\Leadtools.Kernel.targets" Condition="Exists('..\packages\Leadtools.Kernel.21.0.0.2\build\net40\Leadtools.Kernel.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Leadtools.Kernel.21.0.0.2\build\net40\Leadtools.Kernel.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Leadtools.Kernel.21.0.0.2\build\net40\Leadtools.Kernel.targets'))" />
+    <Error Condition="!Exists('..\packages\Leadtools.Formats.Raster.Common.21.0.0.2\build\net40\Leadtools.Formats.Raster.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Leadtools.Formats.Raster.Common.21.0.0.2\build\net40\Leadtools.Formats.Raster.Common.targets'))" />
+    <Error Condition="!Exists('..\packages\Leadtools.Image.Processing.21.0.0.2\build\net40\Leadtools.Image.Processing.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Leadtools.Image.Processing.21.0.0.2\build\net40\Leadtools.Image.Processing.targets'))" />
+    <Error Condition="!Exists('..\packages\Leadtools.Pdf.21.0.0.2\build\net40\Leadtools.Pdf.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Leadtools.Pdf.21.0.0.2\build\net40\Leadtools.Pdf.targets'))" />
+  </Target>
+  <Import Project="..\packages\Leadtools.Formats.Raster.Common.21.0.0.2\build\net40\Leadtools.Formats.Raster.Common.targets" Condition="Exists('..\packages\Leadtools.Formats.Raster.Common.21.0.0.2\build\net40\Leadtools.Formats.Raster.Common.targets')" />
+  <Import Project="..\packages\Leadtools.Image.Processing.21.0.0.2\build\net40\Leadtools.Image.Processing.targets" Condition="Exists('..\packages\Leadtools.Image.Processing.21.0.0.2\build\net40\Leadtools.Image.Processing.targets')" />
+  <Import Project="..\packages\Leadtools.Pdf.21.0.0.2\build\net40\Leadtools.Pdf.targets" Condition="Exists('..\packages\Leadtools.Pdf.21.0.0.2\build\net40\Leadtools.Pdf.targets')" />
 </Project>
